--- a/login-bootstrap5/index.html
+++ b/login-bootstrap5/index.html
@@ -38,7 +38,7 @@
                                 </div>
 
 
-                                <div class="separator">
+                                <div class="separator align-items-center">
                                     <hr>
                                     <span>OR</span>
                                     <hr>
