--- a/Generador-Frases/index.html
+++ b/Generador-Frases/index.html
@@ -29,7 +29,21 @@
                     </span>
                 </div>
                 <div class="mb-3 d-grid px-5">
-                    <button type="submit" class="btn btn-warning button" id="buttn" onclick="generarNuevoColor()">Generar Frase</button>
+                    <button type="submit" class="btn btn-warning button" id="buttn" onclick="generarNuevoColor()">Generate Phrase</button>
+                </div>
+                <div class="d-flex justify-content-center align-items-center gap-3 pb-3">
+                    <a href="facebook.com" target="_blank" class="buttons-social"  title="Share on Facebook">
+                        <i class="bi bi-facebook" style="color: #3B5998;"></i>
+                    </a>
+                    <a href="" class="buttons-social"  title="Share on Whatsapp">
+                        <i class="bi bi-whatsapp" style="color: #2BB741;"></i>
+                    </a>
+                    <a href="" class="buttons-social"  title="Share Twitter">
+                        <i class="bi bi-twitter" style="color: #00ACEE;"></i>
+                    </a>
+                    <a href="" class="buttons-social"  title="Share Instagram">
+                        <i class="bi bi-instagram" style="color: #833AB4;"></i>
+                    </a>
                 </div>
             </div>
         </div>
