--- a/Generador-Frases/index.html
+++ b/Generador-Frases/index.html
@@ -31,7 +31,7 @@
                 <div class="mb-3 d-grid px-5">
                     <button type="submit" class="btn btn-warning button" id="buttn" onclick="generarNuevoColor()">Generate Phrase</button>
                 </div>
-                <div class="d-flex justify-content-center align-items-center gap-3 pb-3">
+                <div class="d-flex justify-content-center align-items-center gap-3 py-2 rounded-bottom-4" style="background-color: whitesmoke;">
                     <a href="facebook.com" target="_blank" class="buttons-social"  title="Share on Facebook">
                         <i class="bi bi-facebook" style="color: #3B5998;"></i>
                     </a>
