--- a/Generador-Frases/index.html
+++ b/Generador-Frases/index.html
@@ -32,7 +32,7 @@
                     <button type="submit" class="btn btn-warning button" id="buttn" onclick="generarNuevoColor()">Generate Phrase</button>
                 </div>
                 <div class="d-flex justify-content-center align-items-center gap-3 py-2 rounded-bottom-4" style="background-color: whitesmoke;">
-                    <a href="facebook.com" target="_blank" class="buttons-social"  title="Share on Facebook">
+                    <a href="http://www.facebook.com/sharer.php?u=https://plxtxs-alejandro.netlify.app/generador-frases/&t=Texto" target="_blank" class="buttons-social"  title="Share on Facebook">
                         <i class="bi bi-facebook" style="color: #3B5998;"></i>
                     </a>
                     <a href="" class="buttons-social"  title="Share on Whatsapp">
