--- a/Generador-Frases/index.html
+++ b/Generador-Frases/index.html
@@ -28,11 +28,14 @@
 
                     </span>
                 </div>
-                <div class="mb-3 d-grid px-5">
+                <div class="mb-3 d-grid px-5 gap-3">
                     <button type="submit" class="btn btn-warning button" id="buttn" onclick="generarNuevoColor()">Generate Phrase</button>
+                    <button type="submit" class="btn btn-warning button" id="buttn-2" >Share</button>
                 </div>
-                <div class="d-flex justify-content-center align-items-center gap-3 py-2 rounded-bottom-4" style="background-color: whitesmoke;">
-                    <a href="http://www.facebook.com/sharer.php?u=https://plxtxs-alejandro.netlify.app/generador-frases/&t=Texto" target="_blank" class="buttons-social"  title="Share on Facebook">
+                <div class=" text-center gap-3 py-2 rounded-bottom-4" style="background-color: whitesmoke;">
+                    <label  style="font-size: 12px;">Share page</label>
+                    <br>
+                    <a href="http://www.facebook.com/share.php?u=https://plxtxs-alejandro.netlify.app/generador-frases/" target="_blank" class="buttons-social"  title="Share on Facebook">
                         <i class="bi bi-facebook" style="color: #3B5998;"></i>
                     </a>
                     <a href="" class="buttons-social"  title="Share on Whatsapp">
@@ -52,4 +55,25 @@
 <script src='https://code.jquery.com/jquery-3.1.1.min.js'></script>
 <script src="js/main.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+<script>
+    const $button = document.querySelector('#buttn-2')
+    if('share' in navigator){
+        $button.addEventListener('click', share)
+        function share(){
+            navigator.share({
+                title:'Probando Share API',
+                text:'Texto',
+                url:'https://plxtxs-alejandro.netlify.app/generador-frases/',
+            })
+            .then(()=>{
+                alert('Compartido')
+            })
+            .catch(()=>{
+                alert('No se pudo compartir')
+            })
+        }
+    }else{
+        alert('No disponible')
+    }
+</script>
 </html>
