--- a/Generador-Frases/index.html
+++ b/Generador-Frases/index.html
@@ -63,8 +63,8 @@
         $button.addEventListener('click', share)
         function share(){
             var textLabel = document.getElementById("noneLabel").innerHTML;
-            var textLabelAut = document.getElementById("noneLabel").innerHTML;
-            var textFinal = textLabel + "...." + "-"+textLabelAut+"-"+ "visit: ";
+            var textLabelAut = document.getElementById("noneLabelAut").innerHTML;
+            var textFinal = textLabel + "...." + "-"+textLabelAut+"-" + "visit: ";
             navigator.share({
                 title:'Random Phrases',
                 text: textFinal,
