--- a/Generador-Frases/index.html
+++ b/Generador-Frases/index.html
@@ -70,15 +70,9 @@
                 text: textFinal,
                 url:'https://plxtxs-alejandro.netlify.app/generador-frases/',
             })
-            .then(()=>{
-                alert('Compartido')
-            })
-            .catch(()=>{
-                alert('No se pudo compartir')
-            })
         }
     }else{
-        alert('No disponible')
+        alert('Not available')
     }
 </script>
 </html>
